--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -158,7 +158,7 @@
     <ClInclude Include="OGL_Application\include\cameraTransformations\fpcamera.h" />
     <ClInclude Include="OGL_Application\include\GLFWwindow.h" />
     <ClInclude Include="OGL_Application\include\Objects\gun.h" />
-    <ClInclude Include="OGL_Application\include\inputs.h" />
+    <ClInclude Include="OGL_Application\include\UI\inputs.h" />
     <ClInclude Include="OGL_Application\include\log.h" />
     <ClInclude Include="OGL_Application\include\LibAndFacility\mymathlib.h" />
     <ClInclude Include="OGL_Application\include\Physics\body.h" />
@@ -282,13 +282,13 @@
     <ClCompile Include="OGL_Application\src\Objects\triangle_tb\triangle_tb.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\viewfinder\viewfinder.cpp" />
     <ClCompile Include="OGL_Application\src\AI.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputCursor.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputEditMode.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputESC.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputMove.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputs.cpp" />
-    <ClCompile Include="OGL_Application\src\input\inputsControlMode.cpp" />
-    <ClCompile Include="OGL_Application\src\input\objectControlsInterface.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputCursor.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputEditMode.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputESC.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputMove.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputs.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\inputsControlMode.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\input\objectControlsInterface.cpp" />
     <ClCompile Include="OGL_Application\src\Physics\AdvancedPhysics\advancedCD.cpp" />
     <ClCompile Include="OGL_Application\src\Physics\AdvancedPhysics\boxplane.cpp" />
     <ClCompile Include="OGL_Application\src\Physics\AdvancedPhysics\spheresphere.cpp" />
